--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "react-native start",
-    "android": "react-native run-android",
+    "android": "cd ./android && ./gradlew app:assembleDebug && ./gradlew installDebug",
     "ios": "react-native run-ios",
     "test": "jest"
   },
@@ -18,8 +18,9 @@
     "preset": "react-native"
   },
   "dependencies": {
-    "react": "16.3.1",
-    "react-native": "~0.55.2",
+    "react": "^16.6.0-alpha.8af6728",
+    "react-native": "^0.57.4",
+    "react-native-navigation": "^2.1.2",
     "react-native-vector-icons": "^6.0.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1"
