--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "babel-preset-react-native-stage-0": "^1.0.1",
     "jest": "^23.4.0",
     "jest-react-native": "^18.0.0",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.3.1",
+    "remote-redux-devtools": "^0.5.16"
   },
   "scripts": {
     "start": "react-native start",
