--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,6 +153,7 @@ configurations.all {
 }
 
 dependencies {
+    compile project(':react-native-image-picker')
     compile project(':react-native-maps')
     implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
