--- a/ios/myapp/Info.plist
+++ b/ios/myapp/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Let&apos;s take that photo!</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>You want to share an image, don&apos;t you?</string>
 	<key>NSLocationUsageDescription</key>
 	<string>Let&apos;s share a place, shall we?</string>
 	<key>UIAppFonts</key>
