--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "react": "^16.6.0-alpha.8af6728",
     "react-native": "^0.57.4",
+    "react-native-image-picker": "^0.28.0",
     "react-native-maps": "^0.23.0",
     "react-native-navigation": "^1.1.277",
     "react-native-vector-icons": "^6.0.2",
