--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-navigation": "^1.1.277",
     "react-native-vector-icons": "^6.0.2",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
