--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "preset": "react-native"
   },
   "dependencies": {
-    "react": "^16.6.0-alpha.8af6728",
-    "react-native": "^0.57.4",
+    "react": "^16.8.3",
+    "react-native": "^0.59.8",
     "react-native-image-picker": "^0.28.0",
     "react-native-maps": "^0.23.0",
-    "react-native-navigation": "^1.1.277",
+    "react-native-navigation": "^2.18.5",
     "react-native-vector-icons": "^6.0.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
